--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "script.js",
   "scripts": {
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "Romain Wirth",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
     "vitest": "^0.34.6"
   }
